[gd_scene load_steps=5 format=3 uid="uid://y8j3xfbfe4m7"]

[ext_resource type="Script" path="res://escenas/config.gd" id="1_agasr"]
[ext_resource type="Theme" uid="uid://di8bfntxwjdif" path="res://escenas/Menu Principal/art/button_default.tres" id="2_b1xpd"]
[ext_resource type="Texture2D" uid="uid://bj13vu1ncm8dm" path="res://assets/tutorial.png" id="3_iv5sa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p2xxb"]

[node name="Config" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_agasr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Cancelar" type="Button" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 257.0
offset_top = 457.0
offset_right = 438.0
offset_bottom = 548.0
text = "CANCELAR"

[node name="Guardar" type="Button" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 703.0
offset_top = 454.0
offset_right = 927.0
offset_bottom = 543.0
text = "GUARDAR CAMBIOS"

[node name="FullBtn" type="CheckButton" parent="ColorRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 0
offset_left = 774.0
offset_top = 255.0
offset_right = 870.0
offset_bottom = 351.0
scale = Vector2(1.58833, 1.69988)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 252.0
offset_top = 306.0
offset_right = 581.0
offset_bottom = 406.0
theme_override_font_sizes/font_size = 35
text = "Pantalla Completa"

[node name="Label2" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 252.0
offset_top = 181.0
offset_right = 581.0
offset_bottom = 281.0
theme_override_font_sizes/font_size = 35
text = "Volumen"

[node name="Plus" type="Button" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 875.0
offset_top = 191.0
offset_right = 921.0
offset_bottom = 262.0
theme_override_font_sizes/font_size = 45
text = "+"

[node name="Min" type="Button" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 710.0
offset_top = 192.0
offset_right = 755.0
offset_bottom = 263.0
theme_override_font_sizes/font_size = 45
text = "-"

[node name="VolumenTxt" type="TextEdit" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 773.0
offset_top = 196.0
offset_right = 868.0
offset_bottom = 256.0
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_p2xxb")
text = "100%"
editable = false

[node name="TutorialBtn" type="Button" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 319.0
offset_top = -620.0
offset_right = 549.0
offset_bottom = -553.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_b1xpd")
text = "Â¿Como jugar?"

[node name="btnExit" type="Button" parent="ColorRect"]
unique_name_in_owner = true
offset_left = 40.0
offset_top = 34.0
offset_right = 257.0
offset_bottom = 84.0
theme_override_font_sizes/font_size = 30
text = "Salir del juego"

[node name="Tutorial" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TutorialSprite" type="Sprite2D" parent="Tutorial"]
position = Vector2(568, 305)
texture = ExtResource("3_iv5sa")

[node name="TutorialClose" type="Button" parent="Tutorial"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 874.0
offset_top = 97.0
offset_right = 943.0
offset_bottom = 128.0
text = "CERRAR"
